# appTracker

./: .gitignore  CMakeLists.txt  Makefile  README.md  application_manager.cpp  application_manager.h  cvTracker.cpp  db_manager.cpp  db_manager.h  main.cpp  readme.md  run_tests.sh  setup.sh
.github/workflows/: tests.yml  tests.yml.bak
src/: analytics_visualizer.cpp  analytics_visualizer.h  application_service.cpp  application_service.h  config.json  db_manager.cpp  db_manager.h  email_import_dialog.cpp  email_import_dialog.h  llm_client.cpp  llm_client.h  main.cpp  mainwindow.cpp  mainwindow.h
tests/: CMakeLists.txt  README.md  test_analytics.cpp  test_application_logic.cpp  test_application_service.cpp  test_db_manager.cpp  test_db_manager_standalone.cpp  test_main.cpp
